Bug 497832: Restore const keyword on char*s in nsMyTrustedEVInfo struct, to reduce compiler spam. r=kaie